Restructure project. Get rid of server. Use CDN for Material Icons and Roboto font. Use Webpack to bundle .html, .ico, and .css.

--- a/ui/lib/templates/globalSettings.html
+++ b/ui/lib/templates/globalSettings.html
@@ -4,11 +4,7 @@
             <div class="md-toolbar-tools">
                 <h2 flex>Global Settings</h2>
                 <md-button class="md-icon-button" ng-click="close()">
-                    <md-icon
-                        class="close"
-                        md-svg-icon="{{iconDir + '/navigation/svg/production/ic_close_48px.svg'}}"
-                        aria-label="Close Dialog">
-                    </md-icon>
+                    <md-icon class="close material-icons" aria-label="Close Dialog">close</md-icon>
                 </md-button>
             </div>
         </md-toolbar>
