--- a/ui/lib/templates/toolbarButtons.html
+++ b/ui/lib/templates/toolbarButtons.html
@@ -8,5 +8,5 @@
     aria-label="{{button.name}}">
 
     <md-tooltip>{{button.name}}</md-tooltip>
-    <md-icon class="toolbarButton" md-svg-icon="{{button.src}}"</md-icon>
+    <md-icon class="toolbarButton material-icons">{{button.icon}}</md-icon>
 </md-button>
