--- a/ui/css/calculaural.css
+++ b/ui/css/calculaural.css
@@ -3,6 +3,7 @@
 }
 
 .toolbarButton{
+    font-size: 40px;
     height: 40px;
     width: 40px;
 }
@@ -13,8 +14,9 @@
 
 #noInstrumentsTab > .addIcon {
     margin: 0 1vw 0 1vw;
-    height: 3vw;
-    width: 3vw;
+    font-size: 2.7vw;
+    height: 2.7vw;
+    width: 2.7vw;
     color: #000;
 }
 
@@ -31,6 +33,7 @@
 }
 
 #globalSettings .close {
+    font-size: 30px;
     width: 30px;
     height: 30px;
 }
