--- a/ui/lib/templates/globalSettings.html
+++ b/ui/lib/templates/globalSettings.html
@@ -8,7 +8,7 @@
                 </md-button>
             </div>
         </md-toolbar>
-        <md-dialog-content>
+        <md-dialog-content layout-padding>
             <settings params="setting.params" model="setting.values"></settings>
         </md-dialog-content>
         <div class="md-actions" layout="row">
